# bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
go/cmd/: BUILD.bazel
