package(default_visibility = ["//visibility:public"])

# Go boilerplate
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_push",
    "container_bundle",
)

go_library(
    name = "go_default_library",
    srcs = ["helloworld.go"],
    importpath = "github.com/hoos/bazel/go/cmd",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_image",
    srcs = ["helloworld.go"],
    importpath = "github.com/hoos/bazel/go/cmd",
)
